--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <button id="prev-btn">Previous</button>
         <button id="next-btn">Next</i></button>
         
-  <button id="add-btn">ADD TO PLAYLIST</button>
+  <button id="add-btn" onclick="addInsidePlaylist()">ADD TO PLAYLIST</button>
       </div>
 
     <!-- right side playlist section -->
